--- a/src/styles.css
+++ b/src/styles.css
@@ -28625,7 +28625,7 @@ code {
   }
 }
 
-/* Custom Google font */
+/* Custom CSS */
 .overpass {
   font-family: "Overpass", sans-serif;
 }
@@ -28647,4 +28647,20 @@ code {
   z-index: 510;
   bottom: 20px;
   right: 30px;
+}
+
+.prev-button {
+  position: absolute;
+  z-index: 1080;
+  display: block;
+  top: 45%;
+  left: 4%;
+}
+
+.next-button {
+  top: 45%;
+  left: 90%;
+  position: absolute;
+  z-index: 1080;
+  display: block;
 }
