Some more CSS tweaks. Refactored Lightbox as components

--- a/src/styles.css
+++ b/src/styles.css
@@ -28626,8 +28626,8 @@ code {
 }
 
 /* Custom CSS */
-.overpass {
-  font-family: "Overpass", sans-serif;
+.roboto {
+  font-family: "Roboto", sans-serif;
 }
 
 .img-card-size {
