--- a/src/styles.css
+++ b/src/styles.css
@@ -28678,3 +28678,7 @@ code {
 .image-card:hover {
   transform: translate(0px, -6px) scale(1.02);
 }
+
+.nav-bar-bg {
+  background-color: #282828;
+}
